기본세팅 변경 -황의철

--- a/Mmm_project/templates/account/login.html
+++ b/Mmm_project/templates/account/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mmm!</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/common.css" />
   </head>
   <body>
-
     <main id="container">
-      
       <section class="login-con">
         <div class="inner">
           <h1 class="logo">Mmm !</h1>
