--- a/Mmm_project/templates/main/pli-detail.html
+++ b/Mmm_project/templates/main/pli-detail.html
@@ -1,4 +1,4 @@
-{% extends 'base/base.html' %}
+{% extends 'base/base_with_navbar.html'  %}
 
 {% load static %}
 
@@ -28,9 +28,7 @@
             <p>불타는 금요일 저녁, 자유의 플리</p>
             <strong>불금에 시원하게 드라이브 어때?</strong>
           </div>
-          <a href="play.html" class="play-btn"
-            ><i class="hidden">버튼 누르면 플레이</i></a
-          >
+          <a href="play.html" class="play-btn"><i class="hidden">버튼 누르면 플레이</i></a>
         </div>
         <!-- 플리 상세 하단 con- 플리에 들어가는 노래들 리스트가 들어감-->
         <div class="pli-con">
@@ -56,34 +54,7 @@
             </li>
           </ul>
         </div>
-        <nav>
-          <ul class="gnb">
-            <li>
-              <a href="#">
-                <i class="hidden">home</i>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="hidden">liked</i>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="hidden">explore</i>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="hidden">my-info</i>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </main>
-    <footer id="footer"></footer>
   </body>
-</html>
-
 {% endblock content %}
+
+
