--- a/Mmm_project/templates/main/my-info.html
+++ b/Mmm_project/templates/main/my-info.html
@@ -1,14 +1,9 @@
-{% extends 'base/base.html' %}
+{% extends 'base/base_with_navbar.html' %}
+
+{% load static %}
 
 {% block content %}
 <body>
-    <header id="header">
-      <div class="search-bar">
-        <h1 class="logo"></h1>
-        <a href="#" class="search-ico"></a>
-      </div>
-    </header>
-
     <main id="container">
       <section class="user-settings">
         <div class="inner">
@@ -75,32 +70,5 @@
         </div>
       </section>
     </main>
-
-    <nav>
-      <div class="inner">
-        <ul class="gnb">
-          <li>
-            <a href="#">
-              <i class="hidden">home</i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="hidden">liked</i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="hidden">explore</i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="hidden">my-info</i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
   </body>
 {% endblock content %}
