--- a/Mmm_project/templates/main/my-liked-songs.html
+++ b/Mmm_project/templates/main/my-liked-songs.html
@@ -1,7 +1,6 @@
-{% extends 'base/base.html' %}
+{% extends 'base/base_with_navbar.html' %}
 
 {% load static %}
-
 
 {% block content %}
   <body>
@@ -33,32 +32,5 @@
         </div>
       </section>
     </main>
-
-    <nav>
-      <div class="inner">
-        <ul class="gnb">
-          <li>
-            <a href="#">
-              <i class="hidden">home</i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="hidden">liked</i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="hidden">explore</i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="hidden">my-info</i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
   </body>
 {% endblock content %}
